--- a/react/package.json
+++ b/react/package.json
@@ -14,12 +14,19 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "antd": "^4.24.1",
+    "cytoscape": "^3.23.0",
+    "cytoscape-fcose": "^2.1.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reactflow": "^11.2.0",
     "sass": "^1.56.1",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "@types/cytoscape": "^3.19.9",
+    "@types/cytoscape-fcose": "^2.1.0"
   }
 }
