--- a/react/package.json
+++ b/react/package.json
@@ -14,19 +14,24 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "antd": "^4.24.1",
+    "axios": "^1.1.3",
     "cytoscape": "^3.23.0",
     "cytoscape-fcose": "^2.1.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-recaptcha": "^2.3.10",
     "reactflow": "^11.2.0",
+    "reaptcha": "^1.12.1",
     "sass": "^1.56.1",
     "typescript": "4.8.4"
   },
   "devDependencies": {
     "@types/cytoscape": "^3.19.9",
-    "@types/cytoscape-fcose": "^2.1.0"
+    "@types/cytoscape-fcose": "^2.1.0",
+    "@types/react-recaptcha": "^2.3.4"
   }
 }
