--- a/react/package.json
+++ b/react/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "next-with-less": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-recaptcha": "^2.3.10",
