--- a/vue/package.json
+++ b/vue/package.json
@@ -10,16 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ant-design/colors": "^6.0.0",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "sass": "^1.56.1",
+    "typescript": "^4.8.4",
+    "url-parse": "^1.5.10",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
+    "@types/url-parse": "^1.4.8",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^29.1.2",
