--- a/vue3/package.json
+++ b/vue3/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@types/axios": "^0.14.0",
     "ant-design-vue": "^3.2.15",
-    "sass": "^1.56.1"
+    "axios": "^1.1.3",
+    "sass": "^1.56.1",
+    "vue-recaptcha": "^2.0.3"
   }
 }
